src/objects/PropensityScores__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>PropensityScores</relationshipLabel>
        <relationshipName>PropensityScores</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Classification</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confidence__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Confidence</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConsumerId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ConsumerId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_To__c</fullName>
        <label>Offer To</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Vision Benefits Members &amp; Dependents</fullName>
                </value>
                <value>
                    <fullName>MetLife Vision Members &amp; Dependents</fullName>
                </value>
                <value>
                    <fullName>CignaVision Members &amp; Dependents</fullName>
                </value>
                <value>
                    <fullName>VSP Providers</fullName>
                </value>
                <value>
                    <fullName>VSP Premiere Providers</fullName>
                </value>
                <value>
                    <fullName>Eyeconic Customers</fullName>
                </value>
                <value>
                    <fullName>Dragon Customers</fullName>
                </value>
                <value>
                    <fullName>Nike Customers</fullName>
                </value>
                <value>
                    <fullName>Level Customers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PersonAccount__c</fullName>
        <label>PersonAccount</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PropensityScores</relationshipLabel>
        <relationshipName>PropensityScores</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Priority</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Propensity_Priority__c</fullName>
        <description>Used for Priority field on Propensity</description>
        <label>Propensity Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>States__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>States</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Span_Begin__c</fullName>
        <description>Sets the Expected Effective date to this field</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Time Span Begin</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Time_Span_End__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Time Span End</label>
        <type>Date</type>
    </fields>
    <label>PropensityScores</label>
    <nameField>
        <displayFormat>PS-{0}</displayFormat>
        <label>PropensityScores Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PropensityScores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>